_sass/components/_footer.scss
@import "settings/colors";

.footer {
  margin-top: 30px;
  section {
    padding: 2em;
  }
  .linklists {
    background-color: lighten($orange, 12.5%);
    .content {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      justify-content: space-between;
      align-items: start;
    }
    .footer-links {
      color: $black;
      min-width: 150px;
      margin: 0.5em 0;
      h2 {
        font-size: 1.1em;
        font-weight: bold;
        margin: 0 0 1em 0;
        padding: 0;
      }
      ul {
        margin: 0 0 0 0;
        padding: 0;
        list-style-type: none;
        li {
          padding: 0;
          margin: 0 0 0.75em 0;
          a {
            color: $black;
          }
        }
      }
    }
  }
  .newsletter {
    background-color: lighten($orange, 24%);
    h2 {
      color: $black;
      font-size: 1.3em;
      font-weight: bold;
      margin: 0 0 1.5em 0;
      padding: 0;
    }
    // Form renders in iframe; styles injected via css param in hbspt.forms.create()
    // Fixed height prevents iframe resize when error messages appear
    iframe {
      width: 100%;
      height: 200px;
    }
  }
  .footer-text {
    background-color: $orange;
    img {
      margin: 1em 0;
      color: $black;
    }
    p {
      color: $black;
      padding-top: 10px;
      font-size: 0.9em;
    }
  }
}

